--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -9,7 +9,7 @@
        </div>
     <% end %>
     <%# // ログインしているときは上記を表示する %>
-    <% if user_signed_in? %> 
+    <%# <% if user_signed_in? %> 
     <div class="card__wrapper">
       <%# 投稿機能実装後、部分テンプレートでプロトタイプ投稿一覧を表示する %>
       
@@ -17,6 +17,6 @@
           
        
     </div>
-    <% end %>
+    <%# <% end %> %>
   </div>
 </main>
